Fix overflowing tags in the dialog.

--- a/src/content/dialog/dialog.css
+++ b/src/content/dialog/dialog.css
@@ -481,11 +481,14 @@ input[type=search]:focus {
   --tag-color-pink: #ff78cb;
   --tag-color-black: #344563;
 
-  list-style-type: none;
+  display: block;
+  overflow: hidden;
   padding: 0;
   margin-top: .2rem;
+  list-style-type: none;
 
   white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .dialog-tags li {
